feat: new client in progress
