# packages/server-new/src/modules/media/controllers/about-media.controller.ts
@@ -1,9 +1,9 @@
 import { type RequestHandler } from 'express';
 import { UserRoleEnum } from '~/modules/user/user-role.js';
 import { Media } from '../Media.js';
-import { type AboutMedia } from '../model.js';
+import { type FullMediaRecord } from '../model.js';
 
-export type Status200_Success = AboutMedia;
+export type Status200_Success = FullMediaRecord;
 export type Status404_NotFound = never;
 
 // eslint-disable-next-line @typescript-eslint/no-redundant-type-constituents
